tests/machine/x/go/right_join.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/right_join.go:112:11: cannot convert entry.Order (variable of struct type Order) to type bool

1: //go:build ignore
